--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/rss": "^4.0.0",
-    "astro": "^4.0.0"
+    "astro": "^4.0.0",
+    "force-graph": "^1.51.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
